# ml-fastapi-docker-render

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/app/: main.py
