[tool.poetry]
name = "ml-fastapi-docker-render"
version = "0.1.0"
description = "ML model with frontend API writen en FastAPI, deployed to Render"
authors = ["alex00pep <alexmtnezf@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "app", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.3.0"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
