[tool.poetry]
name = "predict-language"
version = "0.1.0"
description = "ML model with frontend API written en FastAPI, using a custom-trained model, all deployed to Render"
authors = ["alex00pep <alexmtnezf@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
scikit-learn = "^1.3.0"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
